samples/_failures_safe/1761799272_f8ce50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a097fd4.c: In function ‘main’:
./samples/SAFE/__tmp_8a097fd4.c:151:77: error: ‘decomp’ undeclared (first use in this function)
  151 |     Buffer decompressed = decompress_data(compressed.data, compressed.size, decomp
      |                                                                             ^~~~~~
./samples/SAFE/__tmp_8a097fd4.c:151:77: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8a097fd4.c:151:83: error: expected ‘)’ at end of input
  151 |     Buffer decompressed = decompress_data(compressed.data, compressed.size, decomp
      |                                          ~                                        ^
      |                                                                                   )
./samples/SAFE/__tmp_8a097fd4.c:151:5: error: expected declaration or statement at end of input
  151 |     Buffer decompressed = decompress_data(compressed.data, compressed.size, decomp
      |     ^~~~~~
